# dotfiles

./: .zsh_aliases  .zshrc  .zshrc_linux  .zshrc_mac  README.md
.config/coc/ultisnips/: all.snippets  markdown.snippets  python.snippets
.config/kitty/: kitty.conf
.config/nvim/: coc-settings.json  init.vim  lazy-lock.json  lazyvim.json
.config/nvim/UltiSnips/: cards.snippets  markdown.snippets  python.snippets
.config/nvim/lua/config/: options.lua
.config/nvim/lua/plugins/: supertab.lua
.config/nvim/pythonx/: pyproject.toml
.config/nvim/pythonx/tests/: test_get_uuid.py
.githooks/: prepare-commit-msg
