[tool.poetry]
name = "guiferviz_vim_helpers"
version = "0.0.0"
description = "Utility functions used in VIM's UltiSnips"
authors = ["Guillermo Fernandez <guiferviz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
